# lgtm

./: .gitignore  Cargo.toml  DESIGN.md  LICENSE  README.md
.github/workflows/: release.yml
assets/: LGTM.icns  generate_icon.py
crates/app/: Cargo.toml
crates/app/src/: main.rs  settings.rs  settings_ui.rs  theme.rs
crates/app/src/theme/: embedded.rs  golden.rs  mod.rs  model.rs  registry.rs  resolver.rs  zed.rs
crates/app/src/theme/fixtures/: tokyo-night.json
crates/app/themes/: catppuccin-mocha.json
crates/diff-core/: Cargo.toml
crates/diff-core/src/: lib.rs
crates/gh/: Cargo.toml
crates/gh/src/: lib.rs
crates/git/: Cargo.toml
crates/git/src/: lib.rs
crates/syntax/: Cargo.toml
crates/syntax/queries/graphql/: highlights.scm
crates/syntax/src/: lib.rs
docs/superpowers/plans/: 2026-07-11-settings-themes-fonts.md  2026-07-11-zed-theme-system.md
docs/superpowers/specs/: 2026-07-11-settings-themes-fonts-design.md  2026-07-11-zed-theme-system-design.md  2026-07-12-app-icon-and-bundle-design.md
scripts/: bundle.sh
