[workspace]
resolver = "2"
members = ["crates/diff-core", "crates/gh", "crates/git", "crates/syntax", "crates/claude", "crates/app"]

[workspace.dependencies]
anyhow = "1"
dirs = "5"
imara-diff = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
toml = "0.8"

[profile.dev]
# gpui is slow to run unoptimized; keep our own crates debuggable but opt deps.
opt-level = 0

[profile.dev.package."*"]
opt-level = 2
