[package]
name = "lgtm"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lgtm"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
claude = { path = "../claude" }
diff-core = { path = "../diff-core" }
dirs = { workspace = true }
gh = { path = "../gh" }
git = { path = "../git" }
serde = { workspace = true }
syntax = { path = "../syntax" }
toml = { workspace = true }
# runtime_shaders: compile Metal shaders at runtime so building doesn't require
# Xcode's Metal toolchain (Command Line Tools alone are enough).
gpui = { version = "0.2", features = ["runtime_shaders"] }
gpui-component = "0.5"
gpui-component-assets = "0.5"
fuzzy-matcher = "0.3"
